# agentic-customer-support

./: .env.example  .gitignore  API.md  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT_SCRIPTS.md  MIGRATION_GUIDE.md  SECURITY.md  SECURITY_CHECK.md  STRUCTURE.md  __init__.py  api.py  assistant.py  deploy.ps1  deploy.sh  lambda_handler.py  main.py  pyproject.toml  ui.py
core/: __init__.py  assistant.py
database/: __init__.py  query.py  viewer.py
managers/: ORDER_MANAGER_README.md  __init__.py  conversation_manager.py  conversation_manager_factory.py  conversation_manager_s3.py  integration_example.py  order_manager.py  order_manager_dynamodb.py  order_manager_factory.py  test_order_managers.py
platform_agents/: __init__.py  delivery_agent.py  menu_agent.py  order_agent.py  planner_agent.py
ports/: __init__.py
ports/web/: __init__.py  api.py  fastapi_adapter.py  gradio_client.py  models.py
scripts/: build_lambda_package.ps1  build_lambda_package.sh
tools/: __init__.py  get_menu.py  get_order_status.py  order_manager_init.py  place_order.py
utils/: __init__.py  constants.py
