[project]
name = "agentic-customer-support"
version = "0.1.0"
description = "Multi-agent restaurant customer support system with CLI, REST API, and web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "langchain-anthropic>=0.3.10",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "setuptools>=78.1.0",
    "boto3>=1.26.0",
    "typing-extensions>=4.0.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
web = ["gradio>=5.22.0", "ipywidgets>=8.1.5", "plotly>=6.0.1"]
api = ["fastapi>=0.115.0", "uvicorn>=0.34.0", "mangum>=0.17.0"]
cli = ["tabulate>=0.9.0", "playwright>=1.51.0", "polygon-api-client>=1.14.5", "psutil>=7.0.0", "speedtest-cli>=2.1.3"]
pdf = ["pypdf>=5.4.0", "pypdf2>=3.0.1", "lxml>=5.3.1"]
ai = ["semantic-kernel>=1.25.0", "smithery>=0.1.0"]

[tool.setuptools.packages.find]
include = ["core*", "ports*", "database*", "managers*", "platform_agents*", "tools*", "utils*"]
exclude = ["lambda_build*", "*.tests*"]
